baruuuuu landing page
ada yang dirubah

--- a/apk_pengabsenan/landingneww.html
+++ b/apk_pengabsenan/landingneww.html
@@ -436,7 +436,7 @@
 
 <section class="about-us">
     <h2>Tentang Kami</h2>
-    <p>Kami adalah tim yang berfokus pada inovasi dan kualitas. Kami berkomitmen untuk memberikan produk yang dapat membantu bisnis Anda berkembang lebih cepat dan lebih efisien.</p>
+    <p>Kami adalah tim yang berfokus pada inovasi dan kualitas. Kami berkomitmen penuh untuk mempermudah proses pengabsenan .</p>
     <div class="team">
         <div class="team-member">
             <img src="images/spiderman-removebg-preview.png" alt="Team Member">
