--- a/apk_pengabsenan/landingneww.html
+++ b/apk_pengabsenan/landingneww.html
@@ -474,7 +474,7 @@
 
 
 <footer>
-    <p>&copy; 2025 Produk Kami. Semua hak dilindungi. </a></p>
+    <p>&copy; 2025 Aplikasi pengabsenan. Semua hak dilindungi. </a></p>
 </footer>
 
 </body>
